--- a/Index.html
+++ b/Index.html
@@ -16,49 +16,7 @@
 
 <body>
  
-
-        <footer class="pie-pagina">
-            <div class="grupo-1">
-                <div class="box">
-                    <figure>
-                        <h:outputLink>
-                            <img src="imagenes/Imagen2.PNG" alt="Logo"></img>
-                        </h:outputLink>
-                    </figure>
-                </div>
-                <div class="box">
-                    <h2>CONTACTANOS</h2>
-                    <p> Telefonos: +57 301 - 291 - 9286 (Llamadas) <br> +57 310 - 678 - 4586 (Whatsapp) </p>
-                    <p> Correos electrónicos: servicio@recibosa.org <br> recoleccion@recibosa.org </p>
-                    <p> Dirección: cra 80h # 19 - 70 Sur Bogotá D.C - Colombia </p>
-
-                </div>
-                <div class="box">
-                    <h2>SIGUENOS</h2>
-                    <div class="red-social">
-                        <a href="https://www.facebook.com/profile.php?id=100083171830684" class="fa fa-facebook"
-                            target="_blank"></a>
-                        <a href="https://www.tiktok.com/@recibosa?" class="fa-brands fa-tiktok" target="_blank"></a>
-                        <a href="https://www.instagram.com/recibosa/" class="fa fa-instagram" target="_blank"></a>
-                        <a href="https://www.linkedin.com/in/comercializadora-dise%C3%B1o-ambiental-9a54572b0"
-                            class="fa-brands fa-linkedin" target="_blank"></a>
-                    </div>
-                    <h2>__________________________</h2>
-                    <h2>Contactanos</h2>
-                    <div class="red-social">
-                        <a href="https://www.facebook.com/profile.php?id=100083171830684" class="fa fa-facebook"
-                            target="_blank"></a>
-                        <a href="https://www.tiktok.com/@recibosa?" class="fa-brands fa-tiktok" target="_blank"></a>
-                        <a href="https://www.instagram.com/recibosa/" class="fa fa-instagram" target="_blank"></a>
-                        <a href="https://www.linkedin.com/in/comercializadora-dise%C3%B1o-ambiental-9a54572b0"
-                            class="fa-brands fa-linkedin" target="_blank"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="grupo-2">
-                <small>&copy; 2024 <b>SoftGym</b> - Todos los derechos reservados.</small>
-            </div>
-        </footer>
+<h1>pruebas </h1>
 
 </body>
 
