--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SoftGym</title>
-    <link rel="stylesheet" href="Estilos/Index.css">
-    <link rel="icon" href="/imagenes/Imagen2.PNG">
-    <link rel="stylesheet" href="Java/java.js">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+    <title>Document</title>
 </head>
-
 <body>
- 
-<h1>pruebas </h1>
-
+    <H1>hola</H1>
 </body>
-
 </html>
